// proto/user.proto
syntax = "proto3";

package user;

service UserService {
    rpc GetUser(GetUserRequest) returns (UserResponse) {};
    rpc CreateUser(CreateUserRequest) returns (UserResponse) {};
    rpc ListUsers(ListUsersRequest) returns (stream UserResponse) {};
}

message GetUserRequest {
    int32 user_id = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

message ListUsersRequest {
    int32 limit = 1;
}

message UserResponse {
    int32 user_id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    string status = 5;
}